<resources>
    <string name="app_name">Poika</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="minus_5_sec">-5s</string>
    <string name="plus_5_sec">+5s</string>
    <string name="_00_00">00:00</string>
    <string name="alto">alto</string>
    <string name="soprano">soprano</string>
    <string name="minus">minus</string>
    <string name="choose_song">Choose Song</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete_song">Delete Song</string>
    <string name="select_at_least_one">Please select at least one song or click CANCEL</string>
    <string name="help">Help</string>

    <string name="title_how_to_use">HOW TO USE THE APP</string>
    <string name="title_song_versions">SONG VERSIONS</string>
    <string name="title_troubleshooting">TROUBLESHOOTING</string>
    <string name="to_start_singing_practice_">To start singing practice, please select a song from the menu\n(top right corner)</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_action_cannot_be_undone">\nThis action cannot be undone.</string>
    <string name="do_you_really_want_to_delete_these_songs">Do you really want to delete these songs?\n</string>


</resources>