<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/main_activity_menu_group">

        <item
            android:id="@+id/action_choose_song"
            android:orderInCategory="100"
            android:title="@string/choose_song"
            app:showAsAction="never"/>

        <item
            android:id="@+id/action_delete_song"
            android:orderInCategory="100"
            android:title="@string/delete_song"
            app:showAsAction="never"/>

        <item
            android:id="@+id/menu_help"
            android:orderInCategory="100"
            android:title="@string/help"
            app:showAsAction="never"/>

    </group>
</menu>